#############################################################################
BETA PUBLIC RELEASE VERSION 1.3.1       5-6-08
#############################################################################
 - NEW FEATURES
  * Updated html/master-index.html, deleted html/index.php.
  * Updated pydoc by running genpydoc.sh.
  * Added a whitespace option by by putting whitespaces between atom name
    and residue name, between x and y, and between y and z.
  * Added radius for Chlorine in ligff.py.
  * Added PEOEPB forcefield, data provided by Paul Czodrowski.
  * Updated inputgen.py to write out the electrostatic potential for APBS
    input file. 
  * Updated CHARMM.DAT with two sets of phosphoserine parameters.
  * Allowed amino acid chains with only one residue, using --assign-only 
    option.

 -BUG FIXES
  * Fixed a legacy bug with the web server (web server doesn't like ligand 
    files generated on Windows or old Mac OS platforms).
  * Fixed a bug in configure.ac, so that PDB2PQR no longer checks for 
	Numpy.pth at configure stage.
  * Updated pdb2pka/substruct/Makefile.am. 
  * Fixed isBackbone bug in definitions.py.

#############################################################################
BETA PUBLIC RELEASE VERSION 1.3.0       1-8-08
#############################################################################
 - NEW FEATURES / CHANGES
  * Added "make test" and "make adv-test"
  * Fixed problems with "make dist"
  * Added integration with Opal for launching jobs as well as querying status
  * The user may use NUMPY to specify the location of NUMPY.
  * Both PDB2PKA and PROPKA are enabled by default.  PDB2PKA is enabled by
    default since ligand parameterization would fail without this option.
  * For a regular user, "make install" tells the user the exact command the
    system administrator will use to make the URL viewable.
  * The default value of 7.00 for the pH on the server form is removed due
    to a problem with browser refershing.