@@ -1,5 +1,5 @@
 #############################################################################
-BETA PUBLIC RELEASE VERSION 1.3.1       5-6-08
+BETA PUBLIC RELEASE VERSION 1.3.1       5-16-08
 #############################################################################
  - NEW FEATURES
   * Updated html/master-index.html, deleted html/index.php.
@@ -21,6 +21,7 @@ BETA PUBLIC RELEASE VERSION 1.3.1       5-6-08
 	Numpy.pth at configure stage.
   * Updated pdb2pka/substruct/Makefile.am. 
   * Fixed isBackbone bug in definitions.py.
+  * Fixed a bug for Carboxylic residues in hydrogens.py
 
 #############################################################################
 BETA PUBLIC RELEASE VERSION 1.3.0       1-8-08
